--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,26 +8,76 @@
     <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
 </head>
 <body>
+    <script>
+        AFRAME.registerComponent("pushableobject", {
+            init:function() {
+                let el = this.el;
+                el.addEventListener("collide", function(ev) {
+                    console.log("%c" + ev.srcElement.id, "font-size:2em");
+                });
+                el.addEventListener("click", function() {
+                    let positionObject = el.getAttribute("position");
+                    let positionVector = new THREE.Vector3(positionObject.x, positionObject.y, positionObject.z);
+                    
+                    let camPosObject = document.querySelector("#cam").getAttribute("position");
+                    let camPosVector = new THREE.Vector3(camPosObject.x, camPosObject.y, camPosObject.z);
+                    
+                    // Besaran direction dipengaruhi oleh jarak kamera ke object
+                    let direction = camPosVector.sub(positionVector);
+                    direction = direction.normalize();  // Jadi vektor unit
+                    let speed = -10;
+                    direction = direction.multiplyScalar(speed);
+                    // Fungsi di bawah ini ada di Cannon.js
+                    el.body.applyImpulse(
+                        new CANNON.Vec3(direction.x, 0, direction.z),  // ke arah z- (menjauh dari kamera)
+                        new CANNON.Vec3().copy(positionVector)
+                    );
+                });
+            }
+        });
+        AFRAME.registerComponent('modify-materials', {
+            init: function () {
+            // Wait for model to load.
+            this.el.addEventListener('model-loaded', () => {
+                // Grab the mesh / scene.
+                const obj = this.el.getObject3D('mesh');
+                // Go over the submeshes and modify materials we want.
+                obj.traverse(node => {
+                if (node.name.indexOf('ship') !== -1) {
+                    node.material.color.set('red');
+                }
+                });
+            });
+            }
+        });
+    </script>
     <a-scene id="scene" physics="debug:true">
-        <a-camera position="0 1.5 2">
+        <a-camera id="cam" position="0 1.5 2">
             <a-cursor></a-cursor>
         </a-camera>
         <a-sphere 
             position="0 2 0"
-            dynamic-body
+            pushableobject
+            dynamic-body="mass:5;"
+            shadow
             rotation="0 0 0"
             scale="1 1 1" 
             color="yellow" 
             radius="0.5"
             wireframe="true">
         </a-sphere>
-        <a-box 
+        <!-- <a-box 
             position="0 0 0" 
             static-body
             rotation="0 0 0"
             scale="10 0.1 10"
             color="#ff0000">
-        </a-box>
+        </a-box> -->
+        <a-assets>
+            <a-asset-item id="cityModel" src="billiard1.glb"></a-asset-item>
+        </a-assets>
+        <a-entity gltf-model="#cityModel" modify-materials static-body></a-entity>
+        <a-sphere id="merah" pushableobject radius="0.2" color="red" shadow dynamic-body="mass:5;" position="0 1.5 -3"></a-sphere>
     </a-scene>
 </body>
 </html>
