--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cell exploration</title>
+    <title>billiard</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
 </head>
@@ -51,8 +51,11 @@
             }
         });
     </script>
-    <a-scene id="scene" physics="debug:true">
-        <a-camera id="cam" position="0 1.5 2">
+    <a-scene id="scene" physics="debug:true" stats>
+        <a-camera 
+            id="cam"
+            position="2 2 2"
+        >
             <a-cursor></a-cursor>
         </a-camera>
         <a-sphere 
@@ -63,21 +66,54 @@
             rotation="0 0 0"
             scale="1 1 1" 
             color="yellow" 
-            radius="0.5"
-            wireframe="true">
+            radius="0.2"
+            wireframe="true"
+            >
         </a-sphere>
-        <!-- <a-box 
-            position="0 0 0" 
+        <a-box 
+            position="0 1 0" 
             static-body
             rotation="0 0 0"
             scale="10 0.1 10"
-            color="#ff0000">
-        </a-box> -->
+            color="blue"
+            material="opacity: 1.0; transparent: false"></a-box>
+            >
+        </a-box>
+        <!-- <a-assets>
+            <a-asset-item id="cityModel" src="billiard1.gltf"></a-asset-item>
+        </a-assets> -->
+        <!-- <a-entity gltf-model="#cityModel"
+            modify-materials 
+            static-body>
+        </a-entity> -->
+        <!-- <a-gltf-model 
+            src="billiard1.gltf" 
+            shadow="receive: true"
+            static-body
+            wireframe="true"
+            modify-materials
+            >
+        </a-gltf-model> -->
         <a-assets>
-            <a-asset-item id="cityModel" src="billiard1.glb"></a-asset-item>
+            <a-asset-item id="billiard-obj" src="assets/billiard1.obj"></a-asset-item>
+            <a-asset-item id="billiard-mtl" src="assets/billiard1.mtl"></a-asset-item>
         </a-assets>
-        <a-entity gltf-model="#cityModel" modify-materials static-body></a-entity>
-        <a-sphere id="merah" pushableobject radius="0.2" color="red" shadow dynamic-body="mass:5;" position="0 1.5 -3"></a-sphere>
+        <a-entity 
+            obj-model="obj: #billiard-obj; mtl: #billiard-mtl"
+            modify-materials
+            friction="0"
+            >
+        </a-entity>
+        <a-sphere  
+            pushableobject 
+            dynamic-body="mass:5;" 
+            radius="0.5" 
+            color="green" 
+            shadow 
+            position="0 1.5 -3"
+            wireframe="true"
+        >
+        </a-sphere>
     </a-scene>
 </body>
 </html>
