--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     // Besaran direction dipengaruhi oleh jarak kamera ke object
                     let direction = camPosVector.sub(positionVector);
                     direction = direction.normalize();  // Jadi vektor unit
-                    let speed = -30;
+                    let speed = -80;
                     direction = direction.multiplyScalar(speed);
                     // Fungsi di bawah ini ada di Cannon.js
                     el.body.applyImpulse(
@@ -38,8 +38,23 @@
             init:function() {
                 let el = this.el;
                 el.addEventListener("collide", function(ev) {
-                    console.log("%c" + ev.srcElement.id, "font-size:1em");
+                    // console.log("%c" + ev.srcElement.id, "font-size:1em");
                 });
+            }
+        });
+
+        AFRAME.registerComponent("autospawn", {
+            update:function() {
+                var el = this.el;
+                el.addEventListener("collide", function(ev) {
+                    // console.log("%c" + ev.srcElement.id, "font-size:1em");
+                    el.object3D.position.set(0, 0, 0);
+                    // el.setAttribute('position',{x: 0, y: 0, z: 0});
+                    let positionObject = el.getAttribute("position");
+                    console.log(el);
+                    console.log(positionObject);
+                    // let positionVector = new THREE.Vector3(positionObject.x, positionObject.y, positionObject.z);
+                }); 
             }
         });
 
@@ -60,7 +75,7 @@
         // });
     </script>
 
-    <a-scene id="scene" physics="debug: true; friction: 4; iteration: 10; restitution: 0.3" stats>
+    <a-scene id="scene" physics="debug: false; friction: 0.0000000001; iteration: 10; restitution: 0.3; gravity: -50;" stats>
         <!-- <a-camera 
             id="cam"
             position="0 2 -5"
@@ -74,20 +89,20 @@
                 touchobject
                 static-body
                 scale="3.25 0.05 0.5"
-                material="opacity: 1.0; color: #4CC3D9; transparent: false"
+                material="opacity: 1.0; color: #A52A2A; transparent: false"
             ></a-mixin>
             <a-mixin
                 id="table-edge2"
                 touchobject
                 static-body
                 scale="0.5 0.05 2.9"
-                material="opacity: 1.0; color: #4CC3D9; transparent: false"    
+                material="opacity: 1.0; color: #A52A2A; transparent: false"    
             ></a-mixin>
             <a-mixin
                 id="billiard-ball"
                 touchobject
                 dynamic-body="
-                mass: 10; angularDamping: 0.3; linearDamping: 0.3; shape: sphere; 
+                mass: 10; angularDamping: 0.1; linearDamping: 0.1; shape: sphere; 
                 "
                 shadow 
             ></a-mixin>
@@ -164,7 +179,7 @@
         <!-- billiard ball -->
         <a-sphere
             id="white-ball"
-            pushableobject
+            pushableobject autospawn
             mixin="billiard-ball"
             radius="0.2"
             color="white"       
