--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     // Besaran direction dipengaruhi oleh jarak kamera ke object
                     let direction = camPosVector.sub(positionVector);
                     direction = direction.normalize();  // Jadi vektor unit
-                    let speed = -80;
+                    let speed = -30;
                     direction = direction.multiplyScalar(speed);
                     // Fungsi di bawah ini ada di Cannon.js
                     el.body.applyImpulse(
@@ -75,7 +75,7 @@
         // });
     </script>
 
-    <a-scene id="scene" physics="debug: false; friction: 0.0000000001; iteration: 10; restitution: 0.3; gravity: -50;" stats>
+    <a-scene id="scene" physics="debug: true; friction: 0.1; iteration: 10; restitution: 0.1; gravity: -10;" stats>
         <!-- <a-camera 
             id="cam"
             position="0 2 -5"
@@ -96,16 +96,18 @@
                 touchobject
                 static-body
                 scale="0.5 0.05 2.9"
-                material="opacity: 1.0; color: #A52A2A; transparent: false"    
+                material="opacity: 1.0; color: #A52A2A; transparent: false" 
             ></a-mixin>
             <a-mixin
                 id="billiard-ball"
                 touchobject
+                material="src: assets/epic.png; opacity: 1.0; color: #A52A2A; transparent: false"
                 dynamic-body="
-                mass: 10; angularDamping: 0.1; linearDamping: 0.1; shape: sphere; 
+                mass: 10; angularDamping: 0.3; linearDamping: 0.5; shape: sphere; 
                 "
                 shadow 
             ></a-mixin>
+            <!-- src: assets/epic.png;  -->
         </a-assets>
         <a-entity
             id="rig"
@@ -267,6 +269,47 @@
             position="0.7 1.5 -2.13"
             wireframe="false"
         ></a-sphere>
+        <a-sphere
+            id="11"
+            mixin="billiard-ball"
+            radius="0.2"
+            color="red" 
+            position="-0.925 1.5 -2.5"
+            wireframe="false"
+        ></a-sphere>
+        <a-sphere
+            id="12"
+            mixin="billiard-ball"
+            radius="0.2"
+            color="purple" 
+            position="-0.475 1.5 -2.5"
+            wireframe="false"
+        ></a-sphere>
+        <a-sphere
+            id="13"
+            mixin="billiard-ball"
+            radius="0.2"
+            color="orange" 
+            position="0 1.5 -2.5"
+            wireframe="false"
+        ></a-sphere>
+        <a-sphere
+            id="14"
+            mixin="billiard-ball"
+            radius="0.2"
+            color="green" 
+            position="0.475 1.5 -2.5"
+            wireframe="false"
+        ></a-sphere>
+        <a-sphere
+            id="15"
+            mixin="billiard-ball"
+            radius="0.2"
+            color="red" 
+            position="0.925 1.5 -2.5"
+            wireframe="false"
+        ></a-sphere>
+
         <!-- <a-assets>
             <a-asset-item id="cityModel" src="assets/billiard1.gltf"></a-asset-item>
         </a-assets>
